Delete front docker and add memcache

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,10 @@
 version: '3.2'
 
 services:
-
-  frontend:
-    build: frontend
-    ports:
-      - 20080:80
-    volumes:
-      # Re-use local composer cache via host-volume
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      # Mount source-code for development
-      - ./:/app
-
   backend:
     build: backend
     ports:
-      - 21080:80
+      - 21080:82
     volumes:
       # Re-use local composer cache via host-volume
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
@@ -30,9 +19,8 @@ services:
       - MYSQL_USER=yii2advanced
       - MYSQL_PASSWORD=secret
 
-  #pgsql:
-  #  image: postgres:9.5
-  #  environment:
-  #    - POSTGRES_DB=yii2advanced
-  #    - POSTGRES_USER=yii2advanced
-  #    - POSTGRES_PASSWORD=secret
+  memcached:
+    image: sameersbn/memcached:1.5.6-2
+    ports:
+      - "11211:11311"
+    restart: always
