--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - MYSQL_USER=yii2advanced
       - MYSQL_PASSWORD=secret
 
-  memcached:
+  Memcached:
     image: sameersbn/memcached:1.5.6-2
+    ports:
+    - "11211:11211"
     restart: always
